# skillz

./: .env  app.py  deploy.py  handler.py  pyproject.toml
db/db_template/: connection_pooling.py  create_table.py  crud.py  readme.md  test.json
db/postgres/: connection.py  pool.py  tables.sql
db_template/: ._app.py  ._connection_pooling.py  ._create_table.py  ._crud.py  ._readme.md  app.py  connection_pooling.py
modules/form/: handler.py  model.py  query.py
services/: cli.py  csv_loader.py  send_email.py
test/: ._main.py  main.py
uploads/csv/: file.csv
