[tool.poetry]
name = "topskill-services"
version = "1.0.0"
description = ""
authors = ["Akporowho Marvelous <solomonmarvel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
psycopg2 = "^2.9.1"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
email-validator = "^1.1.3"
pydantic = {extras = ["email"], version = "^1.8.2"}
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
